test/conformance/kuttl/validate/clusterpolicy/standard/enforce/ns-selector-with-wildcard-kind/01-manifests.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-wildcard
  labels:
    freeze: "true"
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: freeze-policy
spec:
  validationFailureAction: Enforce
  background: false
  rules:
    - name: freeze-rule
      match:
        any:
        - resources:
            kinds:
            - "*"
            namespaceSelector:
              matchExpressions:
                - key: freeze
                  operator: In
                  values:
                  - "true"
      validate:
        message: "Namespace is frozen."
        deny: {}
