test/conformance/kuttl/validate/clusterpolicy/standard/enforce/ns-selector-with-wildcard-kind/03-pod-fail.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
  - file: pod-fail.yaml
    shouldFail: true
  - file: pod-pass.yaml
    shouldFail: false
