test/conformance/kuttl/validate/clusterpolicy/standard/enforce/ns-selector-with-wildcard-kind/pod-fail.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: nginx
  name: nginx-block
  namespace: test-wildcard
spec:
  containers:
  - image: nginx
    name: test
