test/conformance/kuttl/validate/clusterpolicy/standard/enforce/ns-selector-with-wildcard-kind/01-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: freeze-policy
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
