test/conformance/kuttl/validate/clusterpolicy/standard/enforce/ns-selector-with-wildcard-kind/03-errors.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-block
  namespace: test-wildcard
